--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,14 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/bondsales?verifyServerCertificate=false&useSSL=true
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=
 
-# ??????????spring??
+# 使用spring.session.store类型的属性配置Spring会议后端数据存储的类型
 spring.session.store-type =jdbc
-# ????
+# 使用spring.session.jdbc.initialize-schema属性启用Spring Session表创建。
 spring.session.jdbc.initialize-schema =always
+
+#单个文件大小
+spring.servlet.multipart.max-file-size=1500MB
+# 设置总上传的文件大小
+spring.servlet.multipart.max-request-size=2000MB
